# streamers-directory-app

./: .env  .gitignore  .pnp.cjs  Cargo.toml  README.md  Trunk.toml  bulma-9380851684f45bad.css  bulma-fcaa8ac04b1383ca.css  index-1332452edf69864a.js  index-1332452edf69864a_bg.wasm  index-170294f3bf2ae4be.js  index-170294f3bf2ae4be_bg.wasm  index-1b8ed9c77527f862.js  index-23f8b40ac03c63da.js  index-291890e34e577933.js  index-291890e34e577933_bg.wasm  index-52bf60684f37b6a6.js  index-7121de0262c858ef.js  index-7121de0262c858ef_bg.wasm  index-716be26b3d9e6ad3.js  index-7d77407a5c66069c.js  index-8240ada026b88b0b.js  index-a762d825a4e27cae.js  index-a762d825a4e27cae_bg.wasm  index-c21891a2d8f949da.js  index-c21891a2d8f949da_bg.wasm  index-d8de85f3898ec416.js  index-d8de85f3898ec416_bg.wasm  index.html  justfile  package-lock.json  package.json
.github/workflows/: deploy.yml
src/: app.rs  main.rs
src/components/: filters.rs  footer.rs  header.rs  list_errors.rs  list_pagination.rs  mod.rs  nav.rs  streamer_card.rs  streamer_list.rs  streamer_preview.rs
src/model/: model.rs
src/routes/: about.rs  home.rs  mod.rs
src/services/: aoc_ref.rs  categories.rs  mod.rs  requests.rs  streamers.rs
src/types/: categories.rs  content_creator.rs  des_streamers.rs  elo.rs  game.rs  game_platforms.rs  games.rs  info_platforms.rs  language.rs  languages.rs  mod.rs  model.rs  platform.rs  platforms.rs  stream_platforms.rs  streamer_card.rs  streamers.rs
static/: styles.scss
static/bulma/: package-lock.json
static/data/: streamers.yaml
tests/: main.rs
