[package]
name = "aoe-streamers-directory"
authors = ["Simonsan <simonsan@systemli.org>"]
categories = ["wasm"]
description = "A categorized directory for people in search for special content"
edition = "2021"
license = "AGPL-3.0-or-later"
readme = "./README.md"
repository = "https://github.com/simonsan/streamers-directory"
version = "0.1.0"

[dependencies]
log = "0.4.14"
yew = "0.18.0"
yew-router = { version = "0.15.0", features = ["web_sys"] }
wasm-bindgen = "0.2.78"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"

# App
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
anyhow = "1.0.44"
thiserror = "1.0.30"
yew-bulma = "0.0.2"
parking_lot = "0.11.2"
lazy_static = "1.4.0"
dotenv_codegen = "0.15.0"

# Requests
#reqwest = { version = "0.11", features = ["json", "rustls-tls", ] }
#tokio = { version = "1", features = ["full"] }

# Storage
# gloo-storage = "0.2.0"

# Timers
# gloo-timers = "0.2.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

[dev-dependencies.web-sys]
version = "0.3.55"
features = [
  "Document",
  "Element",
  "HtmlCollection",
]
